# tsdhn

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  client.py  copy.sh  deform.for  docker-compose.yml  example.py  file-scan.sh  gmt.history  job.run  maper2.mat  maper3.mat  mareografo_a.m  mareograma.eps  maxola.csh  maxola.eps  maxola.grd  mise.toml  oxfmt.config.ts  oxlint.config.ts  package.json  pfalla.inp  puertos.txt  pyproject.toml  readme.md  reporte_old.f90  requirements.txt  tsunami  tsunami.fig  tsunami1.for  tsunami_alloc.for  ttt_max.f90
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dev/: Dockerfile
.devcontainer/prod/: Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker-publish.yml  e2e-compose.yml  pre-commit.yml  release.yml  scorecard.yml  security.yml
api/: config.py  main.py  pyproject.toml
api/api/: routes.py
api/services/: map_service.py
apps/web/: .env.example  .gitignore  package.json  readme.md  vite.config.ts
apps/web/drizzle/: 0000_blue_tana_nile.sql  0000_busy_sprite.sql  0001_fearless_frightful_four.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/src/: app.d.ts
apps/web/src/lib/components/: Footer.svelte  Map.svelte  Navbar.svelte  SourceParams.svelte
apps/web/src/lib/components/ui/: Alert.svelte  Button.svelte
apps/web/src/lib/schema/: earthquake.ts
apps/web/src/lib/server/: api.ts  auth.ts  dispatch.ts  simulations.ts
apps/web/src/lib/server/db/: schema.ts
apps/web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
apps/web/src/routes/(app)/: +layout.server.ts  +layout.svelte
apps/web/src/routes/(app)/dashboard/: +page.server.ts  +page.svelte
apps/web/src/routes/(app)/new/: +page.server.ts  +page.svelte
apps/web/src/routes/(app)/simulations/[id]/: +page.server.ts  +page.svelte
apps/web/src/routes/(app)/simulations/[id]/events/: +server.ts
apps/web/src/routes/(app)/simulations/[id]/report/: +server.ts
apps/web/src/routes/api/calculations/: +server.ts
apps/web/src/routes/login/: +page.server.ts  +page.svelte
apps/web/src/routes/signup/: +page.server.ts  +page.svelte
cli/: api.py  cli.py  config.py  core.py  main.py  ui.py
data/: stations.yml
deploy/: api.Dockerfile  toolchain.Dockerfile  web.Dockerfile
journal/: article.tex  referencias.bib  reporte.aux
libs/api-client/: openapi.json  package.json  readme.md  tsconfig.json
libs/api-client/src/: index.ts
model/: Makefile  Manual Modelo TSDHN.docx  a.out  def_oka.f  deform  deform.for  deform_a.grd  espejo  espejo.f  fault_plane.f90  fault_plane.m  fault_plane_n.m  fault_plane_old.f90  gmt.conf  hgt.cpt  job.run  maper1.mat  mareografo_a.m  mareograma.csh  mareograma1.csh  mareograma2.csh  maxola_old.csh  pfalla.inp  puertos.txt  reporte  reporte.f90  reporte.tex  salida.txt  servidor_DHN.txt  tidal.txt  tsunami-optimized.m  tsunami.m  tsunami1.for  tsunami_alloc.for  ttt.eps  ttt_inverso.f  ttt_max
model/bathy/: xya.mat  xya5.mat
model/journal/: article.aux  article.bbl  article.blg  mareograma.eps  maxola.eps  reporte.tex  ttt.eps
model/ttt_mundo/: cortar5.csh  diagram  etopo  gmt.history  leeme.txt  make_etopo_i2  pacifico.csh  point_ttt  point_ttt2  ttt_inverso
orchestrator/: config.py  main.py  models.py
orchestrator/api/: routes.py  validators.py
orchestrator/core/: calculator.py  config.py  queue.py
orchestrator/models/: reporte.py  schemas.py
orchestrator/modules/: fault_plane.py  maxola.py  point_ttt.py  reporte.py  ttt_inverso.py  ttt_max.py
orchestrator/modules/templates/: reporte_template.tex
orchestrator/services/: calculation_service.py  map_service.py  plot_service.py
orchestrator/tests/: conftest.py  original.m  test_numerical_values.py
orchestrator/utils/: deg2km.py  file_utils.py  geo.py  job_validators.py  processing.py  system.py
scripts/: export_openapi.py  gen-client.ts  setup.sh
scripts/e2e/: backend_stack_smoke.sh
ttt_mundo/: cortar5.csh  diagram  etopo  inverse  leeme.txt
utils/: build-gmt.sh  copy-repo.sh  install_ifx.sh  setup-env.sh
