[project]
name = "picv-2025"
version = "0.1.0"
description = "Tsunami simulation orchestrator workspace"
requires-python = ">=3.14"
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
orchestrator = { workspace = true }
cli = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.15",
    "types-PyYAML",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "pytest-cov>=6",
    "httpx>=0.27",
    "coverage>=7.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
build = [
    "uv_build>=0.11.25",
]

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4
extend-exclude = ["__pycache__", "dist", "build"]

[tool.ruff.lint]
# E/F/W = pycodestyle/pyflakes/pycodestyle warnings
# I = isort
# B = flake8-bugbear
# UP = pyupgrade
# S = flake8-bandit (Python security SAST)
# SIM = flake8-simplify
# RUF = ruff-specific
select = ["E", "F", "W", "I", "B", "UP", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["**/tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["packages/orchestrator/tests"]
addopts = "-ra"
