[project]
name = "picv-2025"
version = "0.1.0"
description = "Tsunami simulation orchestrator workspace"
requires-python = ">=3.14"
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
orchestrator = { workspace = true }
cli = { workspace = true }

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "mypy==2.1.0",
    "types-PyYAML==6.0.12.20260518",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-xdist==3.8.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "coverage==7.14.3",
    "bandit==1.9.4",
    "pip-audit==2.10.1",
]
build = [
    "uv_build==0.11.25",
]

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4
extend-exclude = ["__pycache__", "dist", "build"]

[tool.ruff.lint]
# E/F/W = pycodestyle/pyflakes/pycodestyle warnings
# I = isort
# B = flake8-bugbear
# UP = pyupgrade
# S = flake8-bandit (Python security SAST)
# SIM = flake8-simplify
# RUF = ruff-specific
select = ["E", "F", "W", "I", "B", "UP", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # asserts are fine in tests
# S603 is suppressed: every subprocess call uses arguments from
# validated floats, local Path objects, or frozen dataclass fields.
"packages/orchestrator/src/orchestrator/utils/compiler.py" = ["S603"]
"packages/orchestrator/src/orchestrator/utils/processing.py" = ["S603"]
"packages/orchestrator/src/orchestrator/modules/maxola.py" = ["S603"]
"packages/orchestrator/src/orchestrator/modules/reporte.py" = ["S603"]
"packages/orchestrator/src/orchestrator/modules/ttt_inverso.py" = ["S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["**/tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["packages/orchestrator/tests"]
addopts = "-ra"
